# NovaCore

./: .gitignore  CMakeLists.txt  NovaCore  README.md
ascii/: funny.txt
src/: main.c
